Fix z-index in hovercards (fix #2346)

--- a/static/css/restyle/restyle.less
+++ b/static/css/restyle/restyle.less
@@ -1167,7 +1167,6 @@ body:not(.developer-hub) section.secondary {
 .addon-details .primary .notice,
 .addon-details .secondary.addon-vitals {
   color: #fff;
-  position: relative;
   z-index: 1;
 }
 
